# ScholarPilot

./: .gitignore  CLAUDE.md  README.md  RULE.md  ai-research-copilot-proposal.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7a6442d093d5_initial_schema_documents_chunks_.py  9b7a6c3d2e1f_add_agent_runs.py  a7b8c9d0e1f2_add_eval_run_snapshots.py  b2c3d4e5f6a7_add_audit_logs.py  b7c8d9e0f1a2_add_governance_memberships.py  c4f2f9d1a7e8_add_chat_traces.py  c8d9e0f1a2b3_add_document_lifecycle_fields.py  e5f6a7b8c9d0_add_knowledge_operation_events.py  f6a7b8c9d0e1_add_operation_drafts_and_eval_metrics.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  agent_runs.py  audit_logs.py  auth.py  chat.py  chat_traces.py  documents.py  evaluations.py  governance.py  health.py  knowledge_bases.py  knowledge_operations.py  observability.py  question_logs.py
backend/app/core/: __init__.py  auth.py  config.py  db.py  permissions.py  qdrant.py  redis.py
backend/app/models/: __init__.py  agent_run.py  audit_log.py  base.py  chat_trace.py  citation.py  document.py  evaluation.py  governance.py  knowledge_operation.py
backend/app/providers/: __init__.py  base.py
backend/app/repositories/: __init__.py  agent_run_repo.py  audit_log_repo.py  chat_trace_repo.py  document_repo.py  evaluation_repo.py  governance_repo.py  (+2 more)
backend/tests/: conftest.py  test_agent_runs_api.py  test_agent_service.py  test_audit_log_service.py  test_audit_logs_api.py  test_auth_api.py  test_chat_api.py  test_chat_trace_service.py  test_chat_traces_api.py  test_chunk_service.py  test_citation_service.py  test_document_service.py  test_documents_api.py  test_evaluation_api.py  test_evaluation_service.py  test_governance_api.py  test_governance_service.py  test_health.py  test_knowledge_bases_api.py  test_knowledge_operations_api.py  test_knowledge_operations_service.py  test_observability_api.py  test_observability_service.py  test_parser_service.py  test_sparse_retrieval_service.py
(+67 files in other folders)
