[project]
name = "scholarpilot-backend"
version = "0.1.0"
description = "ScholarPilot backend - AI Research Copilot for paper reading and evidence-first retrieval"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "qdrant-client>=1.12.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
local = [
    # Optional: local embedding models via sentence-transformers (BGE-M3 etc.)
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
